--- a/res/twig/pages/home/cards.twig
+++ b/res/twig/pages/home/cards.twig
@@ -31,13 +31,13 @@
             <a href="{{ card.url }}" class="tooltipped" data-position="bottom" data-delay="50" data-tooltip="{{ card.title }}">
                 <i class="material-icons">{{ card.icon }}</i>
             </a>
-            <a href="{{ card.url }}list" class="tooltipped" data-position="bottom" data-delay="50" data-tooltip="Lista">
+            <a href="{{ card.url }}list/" class="tooltipped" data-position="bottom" data-delay="50" data-tooltip="Lista">
                 <i class="material-icons">format_list_bulleted</i>
             </a>
-            <a href="{{ card.url }}add" class="tooltipped" data-position="bottom" data-delay="50" data-tooltip="Agregar">
+            <a href="{{ card.url }}add/" class="tooltipped" data-position="bottom" data-delay="50" data-tooltip="Agregar">
                 <i class="material-icons">add</i>
             </a>
-            <a href="{{ card.url }}del" class="tooltipped" data-position="bottom" data-delay="50" data-tooltip="Borrar">
+            <a href="{{ card.url }}del/" class="tooltipped" data-position="bottom" data-delay="50" data-tooltip="Borrar">
                 <i class="material-icons">delete</i>
             </a>
         </div>
