--- a/res/twig/sidebar/sidebar.twig
+++ b/res/twig/sidebar/sidebar.twig
@@ -20,14 +20,37 @@
             Inicio
         </a>
     </li>
-    <li>
-        <div class="divider"></div>
-    </li>
-    <li><a class="subheader">Complementos</a></li>
+    <li><div class="divider"></div></li>
     <li class="no-padding">
         <ul class="collapsible collapsible-accordion">
             <li>
-                <a class="collapsible-header">Carreras | Turnos | Peds<i class="material-icons">arrow_drop_down</i></a>
+                <a class="collapsible-header">Control de la pagina<i class="material-icons">arrow_drop_down</i></a>
+                <div class="collapsible-body">
+                    <ul>
+                        <li>
+                            <a href="user/">
+                                <i class="material-icons left">account_box</i>
+                                Usuarios
+                            </a>
+                        </li>
+                        <li>
+                            <a href="page">
+                                <i class="material-icons left">build</i>
+                                Administracion
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </li>
+        </ul>
+    </li>
+    <li>
+        <div class="divider"></div>
+    </li>
+    <li class="no-padding">
+        <ul class="collapsible collapsible-accordion">
+            <li>
+                <a class="collapsible-header">Complementos<i class="material-icons">arrow_drop_down</i></a>
                 <div class="collapsible-body">
                     <ul>
                         <li>
