--- a/res/twig/base.twig
+++ b/res/twig/base.twig
@@ -6,19 +6,19 @@
             <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0"/>
             <title>{{ rec1.page.title }}</title>
             {% if rec1.page.url %}
-                <BASE href="http://{{ rec1.page.url }}">
+                <BASE href="http://{{ rec1.page.url }}"/>
             {% endif %}
 
             <!-- CSS  -->
-            <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+            <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
             <link href="res/libs/materialize/css/materialize.min.css" type="text/css" rel="stylesheet" media="screen,projection"/>
             <link href="res/css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
 
             <!-- Meta -->
-            <meta name="description" content="">
-            <meta name="author" content="Hendell Jonathan Porras Perez">
+            <meta name="description" content=""/>
+            <meta name="author" content="Hendell Jonathan Porras Perez"/>
 
-            <link rel="icon" href="gfx/img/icon.png">
+            <link rel="icon" href="gfx/img/icon.png"/>
         {% endblock %}
     </head>
     <body>
