--- a/res/twig/pages/formats/formato12.twig
+++ b/res/twig/pages/formats/formato12.twig
@@ -40,6 +40,11 @@
                         </a>
                         <ul>
                             <li>
+                                <a class="btn-autofill autofill-clear btn-floating red tooltipped" data-position="bottom" data-tooltip="Limpiar">
+                                    <i class="material-icons">all_out</i>
+                                </a>
+                            </li>
+                            <li>
                                 <a class="btn-autofill autofill-carreras btn-floating red tooltipped" data-position="bottom" data-tooltip="Añadir carreras">
                                     <i class="material-icons">all_out</i>
                                 </a>
@@ -50,7 +55,7 @@
                                 </a>
                             </li>
                             <li>
-                                <a class="btn-autofill btn-floating red tooltipped" data-position="bottom" data-tooltip="Añadir Años">
+                                <a class="btn-autofill autofill-anio_carrera btn-floating red tooltipped" data-position="bottom" data-tooltip="Añadir Años">
                                     <i class="material-icons">all_out</i>
                                 </a>
                             </li>
