--- a/res/twig/pages/formats/formato12.twig
+++ b/res/twig/pages/formats/formato12.twig
@@ -7,7 +7,7 @@
             Por favor proporciona la información que se te solicita
         </h1>
     </blockquote>
-    <form role="form" action="formats/12/add/" method="POST">
+    <form role="form" action="formato/12/add/" method="POST">
         <table class="responsive-table centered">
             <thead>
                 <tr>
@@ -22,7 +22,7 @@
                         {{ element.input_select_peds('ped_id', rec1.peds.list) }}
                     </td>
                     <td>
-                        {{ element.input_select_anio_lectivo('input_select') }}
+                        {{ element.input_select_anio_lectivo('anio_lectivo_value') }}
                     </td>
                     <td>
                         {{ element.input_select_trimestre('trimestre_value') }}
