--- a/res/twig/sidebar/sidebar.twig
+++ b/res/twig/sidebar/sidebar.twig
@@ -54,19 +54,19 @@
                 <div class="collapsible-body">
                     <ul>
                         <li>
-                            <a href="formats/carreras/">
+                            <a href="formato/carreras/">
                                 <i class="material-icons left">directions_run</i>
                                 Carreras
                             </a>
                         </li>
                         <li>
-                            <a href="formats/turnos/">
+                            <a href="formato/turnos/">
                                 <i class="material-icons left">business</i>
                                 Turnos
                             </a>
                         </li>
                         <li>
-                            <a href="formats/peds/">
+                            <a href="formato/peds/">
                                 <i class="material-icons left">donut_small</i>
                                 Peds
                             </a>
